--- a/web/index.html
+++ b/web/index.html
@@ -68,8 +68,8 @@
               <small id="emailHelp" class="form-text text-muted">La editorial es parte importante.</small>
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Direccion</label>
-              <input type="text" class="form-control" id="exampleInputDireccion" name="direccion" >
+              <label for="exampleInputPassword1">Año de publicacion</label>
+              <input type="text" class="form-control" id="exampleInputDireccion" name="publicacion" >
             </div>
             
           
