--- a/web/index.html
+++ b/web/index.html
@@ -60,13 +60,13 @@
             </div>
              <div class="form-group">
                 <label for="exampleInputName">Tipo de pasta</label>
-                <input class="form-control" type="text" placeholder="ingresar telefono" name="pasta" >
+                <input class="form-control" type="text" placeholder="ingresar pasta" name="pasta" >
             </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Editorial</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="editorial" >
-              <small id="emailHelp" class="form-text text-muted">La editorial es parte importante.</small>
+              <label for="exampleInputPassword1">Editorial</label>
+              <input type="text" class="form-control" id="exampleInputDireccion" name="editorial" >
             </div>
+            
             <div class="form-group">
               <label for="exampleInputPassword1">Año de publicacion</label>
               <input type="text" class="form-control" id="exampleInputDireccion" name="publicacion" >
